Fix compilation problems in remote-a2a-agent of section-2 step-08 (#367)
* Fix compilation problems in remote-a2a-agent of section-2 step-08

* Restore config value for A2A server URL