@@ -1,5 +1,6 @@
 package com.demo;
 
+import java.util.Collections;
 import java.util.List;
 
 import jakarta.enterprise.context.ApplicationScoped;
@@ -7,12 +8,12 @@ import jakarta.enterprise.inject.Produces;
 
 import org.eclipse.microprofile.config.inject.ConfigProperty;
 
-import io.a2a.server.PublicAgentCard;
-import io.a2a.spec.AgentCapabilities;
-import io.a2a.spec.AgentCard;
-import io.a2a.spec.AgentInterface;
-import io.a2a.spec.AgentSkill;
-import io.a2a.spec.TransportProtocol;
+import org.a2aproject.sdk.server.PublicAgentCard;
+import org.a2aproject.sdk.spec.AgentCapabilities;
+import org.a2aproject.sdk.spec.AgentCard;
+import org.a2aproject.sdk.spec.AgentInterface;
+import org.a2aproject.sdk.spec.AgentSkill;
+import org.a2aproject.sdk.spec.TransportProtocol;
 
 @ApplicationScoped
 public class PricingAgentCard {
@@ -23,28 +24,25 @@ public class PricingAgentCard {
     @Produces
     @PublicAgentCard
     public AgentCard agentCard() {
-        
-        return new AgentCard.Builder()
+        return AgentCard.builder()
                 .name("Pricing Agent")
                 .description("Estimates the market value of a vehicle based on make, model, year, and condition.")
                 .url(baseUrl)
                 .version("1.0.0")
-                .protocolVersion("1.0.0")
-                .capabilities(new AgentCapabilities.Builder()
+                .capabilities(AgentCapabilities.builder()
                         .streaming(true)
                         .pushNotifications(false)
-                        .stateTransitionHistory(false)
                         .build())
                 .defaultInputModes(List.of("text"))
                 .defaultOutputModes(List.of("text"))
-                .skills(List.of(new AgentSkill.Builder()
-                                .id("pricing")
-                                .name("Vehicle pricing")
-                                .description("Estimates the market value of a vehicle based on make, model, year, and condition")
-                                .tags(List.of("pricing", "valuation"))
-                                .build()))
+                .skills(List.of(AgentSkill.builder()
+                        .id("pricing")
+                        .name("Vehicle pricing")
+                        .description("Estimates the market value of a vehicle based on make, model, year, and condition")
+                        .tags(List.of("pricing", "valuation"))
+                        .build()))
                 .preferredTransport(TransportProtocol.JSONRPC.asString())
-                .additionalInterfaces(List.of(
+                .supportedInterfaces(Collections.singletonList(
                         new AgentInterface(TransportProtocol.JSONRPC.asString(), baseUrl)))
                 .build();
     }
